HelloWorldService.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-port
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - port: 88
      targetPort: 80
  selector:
    component: web
