HelloWorldIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  labels:
    app: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: hello-world-port
              servicePort: 88
